--- a/style.css
+++ b/style.css
@@ -4,16 +4,28 @@ body {
     font-family: "VT323", monospace;
     font-weight: 400;
     font-style: normal;
+    font-size: 20px;
     background-color: black;
     color: lime;
     display: flex;
 }
 
+.terminal {
+    animation: blink 1s step-start infinite;
+}
+
+@keyframes blink {
+    50% { opacity: 0; }
+}
+
 .container {
     padding: 20px;
+    width: 50%;
+    margin: auto;
 }
 
 .header {
+    display: flex;
 }
 
 .main {
